Fixed an issue with the page not centering on mobiles removing sides padding on flex container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,14 +8,13 @@
  margin: 0; 
   padding: 0;
   border: 0;
-
 }
 
 body {
   font-family: 'Playfair Display', serif;
   color: #333;
   padding: 0;
-  margin: 0;
+  /* margin: 0; */
 }
 
 h1,
@@ -75,15 +74,15 @@ ul li a:hover {
   max-width: 1280px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  /* padding-left: 15px; */
+  /* padding-right: 15px; */
 }
 
 .row {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -15px;
-  margin-right: -15px;
+  /* margin-left: -15px; */
+  /* margin-right: -15px; */
   width: 100%;
 }
 
@@ -172,7 +171,7 @@ ul li a:hover {
 }
 
 .hero-text h1 {
-  font-size: 60px;
+  font-size: 40px;
 }
 
 .hero-text h3 {
@@ -394,7 +393,7 @@ a:active i::before {
   }
  
   input[type=text], select _{
-  width: 90%;
+    width: 80%;
     padding: 5px 20px;
     margin: 5px 0;
     display: inline-block;
@@ -403,7 +402,7 @@ a:active i::before {
     font-family:'Playfair Display', serif;
   }
   input[type=email], select _{
-      width: 90%;
+      width: 80%;
       padding: 5px 20px;
       margin: 5px 0;
       display: inline-block;
@@ -418,7 +417,7 @@ a:active i::before {
       outline: 2px solid #627a7b;
   }
     textarea {
-      width: 90%;
+      width: 80%;
       height: 100px;
       margin: 5px 0;
       padding: 5px 20px;
